--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,6 +19,7 @@
           <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
           {% endif %}
         {% endfor %}
+         <a class="page-link" href="{{ "/search.html" | prepend: site.baseurl }}">Search</a>
       </div>
     </nav>
 
